src/index.css
input[type="text"] {
    color: #808589;
    text-align: center;
  }

input[type="checkbox"] {
  zoom: 2.5;
  float: left;
}

.songs-with-checkboxes li {
  position:relative;
}

  input[type="submit"]:hover {
      border: 2px solid #FFC56B;
  }

  body {
    color: #808589;
    font-family: 'Open Sans', sans-serif;
    align-items: center;
    height: 100%;
  }

   li {
    list-style-type: none;
  }

  #home-main-form {
    width: 70%;
    position: relative;
    bottom: 50%;
    margin: 0 auto;
    transform: translateY(80%);
  }

  #search-input {
    width: 85%;
    font-size: 500%;
    background: rgba(241,	246,	249, .8	);
    border: none;
  }

  #home-main-form #search {
    border: none;
    float: right;
    width: 120px;
    height: 120px;
    border-radius: 50%;
    background-color: rgb(86,	132,	174	);
    color: white;
    font: 24px 'Open Sans',sans-serif;
  }

  #home-main-form #search:hover {
    transform: scale(1.2);
  }

  .artist-list {
    background: rgba(241,	246, 249, .8	);
    width: 70%;
    position: relative;
    top: 100px;
    clear: both;
    margin: 0 auto;
    font-size: 30px;
  }

.artist-song-list ul {
  background: rgba(241,	246,	249, .7	);
  width: 70%;
  align-self: center;
}

::-webkit-input-placeholder {
   text-align: center;
   color: #808589;
   font-family: 'Open Sans', sans-serif;
}

:-moz-placeholder { /* Firefox 18- */
   text-align: center;
   font-family: 'Open Sans', sans-serif;
}

::-moz-placeholder {  /* Firefox 19+ */
   text-align: center;
   color: #808589;
   font-family: 'Open Sans', sans-serif;
}

:-ms-input-placeholder {
   text-align: center;
   color: #808589;
   font-family: 'Open Sans', sans-serif;
}

#nav {
  max-height: 150px;
}

#login-image {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background-color: rgb(128,	133,	137	);
  color: white;
  clear: left;
  font: 14px 'Open Sans',sans-serif;
  top: 15px;
  right: 90px;
  position: fixed;
  border: none;
}

#login-image:hover {
  transform: scale(1.1);
}

#logout-image {
  max-width: 70px;
  position: fixed;
  top: 10px;
  right: 10px;
}

#saved-suggestion {
  max-width: 70px;
  position: fixed;
  top: 10px;
  right: 85px;
}

#welcome-back {
  position: fixed;
  top: 10px;
  right: 170px;
}

.register-image {
  position: fixed;
  top: 15px;
  right: 10px;
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background-color: rgb(86,	132,	174	);
  color: white;
  clear: left;
  font: 14px 'Open Sans',sans-serif;
  position: fixed;
  border: none;
}

.register-image:hover {
  transform: scale(1.1);
}

html {
  background: url(images/new.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  max-width: 100%;
}

.wrap {
  display: none;
}

.wrap {
	margin:0;
	color:white;
	background:rgb(117,	155,176	);
	font:600 20px/22px 'Open Sans',sans-serif;
  float: right;
	margin:auto;
  top: 100px;
  clear: both;
	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
}

.form{
	padding:30px 30px 30px 30px;
}

